# CodRad

./: .gitignore  COMPARISON.md  OPENCLAIR.md  README.md  REVIEW.md  TECHNICAL_REVIEW.md  conversations.db  pyproject.toml  requirements.txt  start.sh  test_nvidia_minimax.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.jsx.bak  main.jsx
frontend/src/components/: ChatInput.jsx  GitHubPanel.jsx  Header.jsx  MessageList.jsx  ProjectPanel.jsx  SessionList.jsx  SettingsModal.jsx  Welcome.jsx
frontend/src/hooks/: useSocketIO.js
frontend/src/styles/: main.css
local_agent_server/: .env  .env.example  client.py  server.py  socketio_server.py
local_agent_server/api/: __init__.py  websocket.py
local_agent_server/api/routes/: __init__.py  admin.py  conversations.py  github.py  projects.py  skills.py  sse.py  (+2 more)
local_agent_server/core/: __init__.py  auth.py  auth_oauth.py  cleanup.py  condenser.py  config.py  confirmation.py  critique.py  events.py  hooks.py  metrics.py  persistence.py  sandbox.py  security.py  security_analyzer.py  state_machine.py  watcher.py
local_agent_server/integrations/: __init__.py
local_agent_server/models/: __init__.py  schemas.py
local_agent_server/services/: __init__.py  agent_factory.py  conversation_manager.py  project_manager.py  session_manager.py  streaming_hook.py  workspace_manager.py
local_agent_server/skills/: __init__.py  code-review.md  frontend-design.md  import_original.py
local_agent_server/utils/: helpers.py
skills/: README.md  python-expert.md
(+33 files in other folders)
